<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.AddExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amountTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amountTextInputEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/Amount"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriptionTextInputEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/Description"
                android:inputType="textPersonName|textCapSentences"
                android:textColor="#000000"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/dateLinerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:padding="4dp"
                android:text="@string/Date"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="2020/01/01"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/categoryLinerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:padding="4dp"
                    android:text="@string/Category"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="30dp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>